--- a/datax-admin/src/main/resources/application.yml
+++ b/datax-admin/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
-  #port: 8080
-  port: ${server.port}
+   port: 8080
+  #port: ${server.port}
 spring:
   #数据源
   datasource:
     #    username: root
     #password: root
     #url: jdbc:mysql://localhost:3306/datax_web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
-    password: ${DB_PASSWORD:password}
-    username: ${DB_USERNAME:username}
-    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_DATABASE:dataxweb}?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
+    password: ceshi
+    username: ceshi
+    url: jdbc:mysql://192.168.1.105:3306/datax_web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
 
 
@@ -32,8 +32,8 @@ spring:
     port: 25
     #username: xxx@qq.com
     #password: xxx
-    username: ${mail.username}
-    password: ${mail.password}
+    username: alias
+    password: 123456
     properties:
       mail:
         smtp:
@@ -87,9 +87,9 @@ logging:
   #  com.wugui.datax.admin.mapper: info
 #path: ./data/applogs/admin
   level:
-    com.wugui.datax.admin.mapper: error
-  path: ${data.path}/applogs/admin
-
+    com.wugui.datax.admin.mapper: info
+    #path: ${data.path}/applogs/admin
+    path: D:\data\applogs\admin
 
 
 #datax-job, access token
